# mediagoblin

./: .dockerignore  .gitignore  .gitmodules  AUTHORS  COPYING  Dockerfile  FOO300  MANIFEST.in  Makefile.in  PKG-INFO  README  README.md  READMEish.html  READMEish.org  aclocal.m4  alembic.ini  app.sh  babel.ini  bootstrap.sh  buildout.cfg  configure  configure.ac  destroy_environment.py  env.in  export_docker.sh  lazycelery.sh  lazyserver.sh  lazystarter.sh  lazystarter.sh.in  maketarball.sh  mediagoblin.example.ini  mediagoblin.ini  mediagoblin_local.ini  my_init  paste.ini  paste.py2.ini  render_test.py  requirements.txt  run_grain.sh  runtests.sh  (+7 more)
.sandstorm/: build.sh  launcher.sh  sandstorm-files.list  sandstorm-pkgdef.capnp  setup.sh
.tx/: config
api-docs/: Makefile
api-docs/source/: conf.py  index.rst  modules.rst
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
devtools/: make_example_database.sh  maketarball.sh  move_translations_for_pootle.sh  pootle-exclude.txt  update_translations.sh  update_translations_pootle.sh
docs/: Makefile  beardomatic.rst  codebase.rst  codedocs.rst  conf.py  contributinghowto.rst  deploymenthowto.rst  designdecisions.rst  foreward.rst  foreword.rst  git.rst  hackinghowto.rst  index.rst  installation.rst  mediagoblin.rst  softwarestack.rst  theminghowto.rst  vision.rst  workflow.rst
docs/source/: about.rst  about_mediagoblin.rst  codebase.rst  conf.py  configuration.rst  contributinghowto.rst  deploying.rst  deploymenthowto.rst  designdecisions.rst  foreword.rst  git.rst  hackinghowto.rst  help.rst  index.rst  media-types.rst  plugins.rst  production-deployments.rst  relnotes.rst  theming.rst  theminghowto.rst
docs/source/api/: activities.rst  authentication.rst  client_register.rst  images.rst  media.rst  media_interaction.rst  oauth.rst  objects.rst
docs/source/devel/: codebase.rst  migrations.rst  originaldesigndecisions.rst  storage.rst
docs/source/mgext/: youcanhelp.py
docs/source/plugindocs/: basic_auth.rst  flatpagesfile.rst  ldap.rst  oauth.rst  openid.rst  persona.rst  raven.rst  sampleplugin.rst  trim_whitespace.rst
docs/source/pluginwriter/: api.rst  authhooks.rst  database.rst  foreward.rst  hooks.rst  media_type_hooks.rst  quickstart.rst  tests.rst
docs/source/siteadmin/: about.rst  codebase.rst  commandline-upload.rst  configuration.rst  deploying.rst  foreword.rst  help.rst  media-types.rst  plugins.rst  (+3 more)
extlib/: README
extlib/exif/: LICENSE
extlib/freesound/: audioprocessing.py
extlib/inconsolata/: INFO.txt
extlib/thingiview.js/: thingiview.js
extlib/video-js/: video-js.css  video-js.min.css  video.js  video.min.js
m4/: python.m4
mediagoblin/: __init__.py  _compat.py  _version.py  app.py  buildout_recipes.py  config.py  config_spec.ini  decorators.py  errormiddleware.py  globals.py  messages.py  mg_globals.py  models.py  processing.py  routing.py  staticdirect.py  storage.py  util.py  views.py  workbench.py
mediagoblin/admin/: __init__.py  routing.py  views.py
mediagoblin/auth/: __init__.py  forms.py  lib.py  routing.py  tools.py  views.py
mediagoblin/celery_setup/: __init__.py  from_celery.py  from_tests.py
mediagoblin/confirm/: forms.py  lib.py  routing.py  views.py
mediagoblin/db/: __init__.py  base.py  extratypes.py  indexes.py  migration_tools.py  migrations.py  mixin.py  models.py  models_v0.py  open.py  sql.py  sql_switch.py  util.py
mediagoblin/edit/: __init__.py  forms.py  lib.py  routing.py  views.py
mediagoblin/federation/: __init__.py  decorators.py  forms.py  oauth.py  routing.py  task.py  views.py
mediagoblin/gmg_commands/: __init__.py  addmedia.py  assetlink.py  batchaddmedia.py  dbupdate.py  deletemedia.py  import_export.py  migrate.py  mongosql.py  reprocess.py  serve.py  shell.py  theme.py  users.py  util.py  wipealldata.py
mediagoblin/init/: __init__.py  config.py
mediagoblin/listings/: __init__.py  routing.py  views.py
mediagoblin/meddleware/: __init__.py  csrf.py  noop.py
mediagoblin/media_types/: __init__.py  tools.py
mediagoblin/meta/: routing.py  views.py
mediagoblin/middleware/: __init__.py  csrf.py  noop.py  testing.py
mediagoblin/moderation/: forms.py  routing.py  tools.py  views.py
mediagoblin/notifications/: __init__.py  routing.py  task.py  tools.py  views.py
mediagoblin/oauth/: exceptions.py  forms.py  oauth.py  routing.py  views.py
mediagoblin/plugins/: README
mediagoblin/process_media/: __init__.py  errors.py  workbench.py
mediagoblin/processing/: __init__.py  task.py
mediagoblin/storage/: __init__.py  cloudfiles.py  filestorage.py  mountstorage.py
mediagoblin/submit/: __init__.py  forms.py  lib.py  routing.py  security.py  task.py  views.py
mediagoblin/tests/: .#test_submission.py  __init__.py  appconfig_context_modified.ini  appconfig_plugin_specs.ini  appconfig_static_plugin.ini  conftest.py  fake_carrot_conf_bad.ini  fake_carrot_conf_good.ini  fake_celery_conf.ini  fake_celery_conf_mgdb.ini  fake_celery_module.py  fake_config_spec.ini  mgoblin_test_app.ini  pytest.ini  resources.py  starttls_config.ini  test_api.py  test_auth.py  test_basic_auth.py  test_cache.py  test_celery_setup.py  test_collections.py  test_config.py  test_csrf_middleware.py  test_edit.py  test_exif.py  test_globals.py  test_http_callback.py  test_ldap.py  test_legacy_api.py  test_messages.py  test_metadata.py  test_mgoblin_app.ini  test_migrations.py  test_misc.py  test_modelmethods.py  test_moderation.py  test_notifications.py  test_oauth.py  test_oauth1.py  (+21 more)
mediagoblin/themes/: sandyseventiesspeedboat
mediagoblin/tools/: common.py  crypto.py  exif.py  federation.py  feed.py  files.py  json.py  licenses.py  mail.py  metadata.py  pagination.py  pluginapi.py  processing.py  request.py  response.py  routing.py  session.py  staticdirect.py  template.py  testing.py  text.py  theme.py  timesince.py  transition.py  translate.py  url.py  validator.py  workbench.py
mediagoblin/user_pages/: forms.py  lib.py  routing.py  views.py
mediagoblin/webfinger/: __init__.py  routing.py  views.py
translations/: master.po
(+511 files in other folders)
